<?xml version="1.0" encoding="utf-8"?>
    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/title_frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/title_home"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/bg_home_top" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/title_service"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_service_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="?attr/colorButtonNormal"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_service_pump_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:text="@string/location_curr"
                        android:textColor="@android:color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </FrameLayout>

            <LinearLayout
                android:id="@+id/func_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView1"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_data"
                        app:srcCompat="@drawable/myinfo" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:text="@string/service_oper"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_temp_motor"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="top"
                            android:gravity="top"
                            android:text="@string/service_oper_english"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_service_guide"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_mine"
                        app:srcCompat="@drawable/mine_detail" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_service_guide_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_service_guide_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_guide_detail"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_data"
                        app:srcCompat="@drawable/settings" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:text="@string/service_more"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_temp_round1"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="top"
                            android:gravity="top"
                            android:text="@string/service_more_english"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_service_more"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_mine"
                        app:srcCompat="@drawable/mine_detail" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_service_more_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_service_more_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_more_detail"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_data"
                        app:srcCompat="@drawable/myinfo" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:text="@string/about_us"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_temp_round2"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="top"
                            android:gravity="top"
                            android:text="@string/about_us_english"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_service_about_us"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_mine"
                        app:srcCompat="@drawable/mine_detail" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_service_about_us_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_service_about_us_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_about_us_detail"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="50dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="start|center_vertical"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_data"
                        app:srcCompat="@drawable/settings" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="bottom"
                            android:gravity="bottom"
                            android:text="@string/about_app"
                            android:textColor="@android:color/black"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_temp_fix1"
                            android:layout_width="match_parent"
                            android:layout_height="35dp"
                            android:layout_gravity="top"
                            android:gravity="top"
                            android:text="@string/about_app_english"
                            android:textColor="@android:color/darker_gray"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_service_about_app"
                        android:layout_width="20dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/title_mine"
                        app:srcCompat="@drawable/mine_detail" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_service_about_app_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="2dp"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/tv_service_about_app_detail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:text="@string/service_about_app_detail"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>